[gd_scene load_steps=24 format=3 uid="uid://b327nj58ktob7"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_wwnok"]
[ext_resource type="Texture2D" uid="uid://dor3rojyhsgbu" path="res://assets/sprites/PlaneTurn.png" id="2_qovok"]
[ext_resource type="Texture2D" uid="uid://dollkoll5l36" path="res://assets/sprites/Flame.png" id="3_d8xk6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_d84kh"]
atlas = ExtResource("2_qovok")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dai3j"]
atlas = ExtResource("2_qovok")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_63fd8"]
atlas = ExtResource("2_qovok")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgrfe"]
atlas = ExtResource("2_qovok")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ab60"]
atlas = ExtResource("2_qovok")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hg2kq"]
atlas = ExtResource("2_qovok")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ey106"]
atlas = ExtResource("2_qovok")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_88jfr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d84kh")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dai3j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63fd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgrfe")
}],
"loop": false,
"name": &"tilt_left",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ab60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hg2kq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ey106")
}],
"loop": false,
"name": &"tilt_right",
"speed": 7.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_162ho"]
atlas = ExtResource("3_d8xk6")
region = Rect2(0, 0, 4, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfwby"]
atlas = ExtResource("3_d8xk6")
region = Rect2(4, 0, 4, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_6s3ug"]
atlas = ExtResource("3_d8xk6")
region = Rect2(8, 0, 4, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_3btsg"]
atlas = ExtResource("3_d8xk6")
region = Rect2(12, 0, 4, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_170d1"]
atlas = ExtResource("3_d8xk6")
region = Rect2(12, 0, 4, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_cbk70"]
atlas = ExtResource("3_d8xk6")
region = Rect2(8, 0, 4, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5fem"]
atlas = ExtResource("3_d8xk6")
region = Rect2(4, 0, 4, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvjpy"]
atlas = ExtResource("3_d8xk6")
region = Rect2(0, 0, 4, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_86c7b"]
atlas = ExtResource("3_d8xk6")
region = Rect2(0, 4, 4, 4)

[sub_resource type="SpriteFrames" id="SpriteFrames_tabny"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_162ho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfwby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6s3ug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3btsg")
}],
"loop": false,
"name": &"flame_on",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_170d1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cbk70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5fem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvjpy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86c7b")
}],
"loop": false,
"name": &"idle",
"speed": 24.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ar50a"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nnutb"]

[node name="player" type="CharacterBody2D" groups=["player"]]
rotation = -1.5708
script = ExtResource("1_wwnok")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_88jfr")
animation = &"idle"

[node name="flame_on" type="AnimatedSprite2D" parent="."]
z_index = -1
position = Vector2(-17, -6.15398e-05)
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_tabny")
animation = &"idle"

[node name="hitbox" type="CollisionShape2D" parent="." groups=["player"]]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ar50a")

[node name="muzzle" type="Marker2D" parent="."]
position = Vector2(17, -6.15398e-05)
rotation = 1.5708

[node name="jet_flames" type="Marker2D" parent="."]
position = Vector2(-14, -5.06799e-05)
rotation = 1.5708

[node name="reload_timer" type="Timer" parent="."]
wait_time = 1.25
one_shot = true

[node name="enemy_detector" type="Area2D" parent="."]
visible = false
collision_mask = 129

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_detector"]
rotation = -1.5708
scale = Vector2(1.5, 1.5)
shape = SubResource("CapsuleShape2D_nnutb")

[connection signal="timeout" from="reload_timer" to="." method="_on_reload_timer_timeout"]
[connection signal="area_entered" from="enemy_detector" to="." method="_on_enemy_detector_area_entered"]
[connection signal="area_shape_entered" from="enemy_detector" to="." method="_on_enemy_detector_area_shape_entered"]
[connection signal="body_entered" from="enemy_detector" to="." method="_on_enemy_detector_body_entered"]
[connection signal="body_shape_entered" from="enemy_detector" to="." method="_on_enemy_detector_body_shape_entered"]
